support/etc/WiTi/iptables.rules
# Generated by iptables-save v1.4.14 on Wed Apr  9 23:40:14 2014
*mangle
:PREROUTING ACCEPT [1100:141662]
:INPUT ACCEPT [681:69554]
:FORWARD ACCEPT [408:71070]
:OUTPUT ACCEPT [429:59712]
:POSTROUTING ACCEPT [837:130782]
:internet - [0:0]
-A PREROUTING -i wlan0 -p tcp -m tcp --dport 80 -j internet
-A PREROUTING -i wlan0 -p tcp -m tcp --dport 443 -j internet
-A internet -j MARK --set-xmark 0x63/0xffffffff
COMMIT
# Completed on Wed Apr  9 23:40:14 2014
# Generated by iptables-save v1.4.14 on Wed Apr  9 23:40:14 2014
*nat
:PREROUTING ACCEPT [90:8293]
:INPUT ACCEPT [34:4378]
:OUTPUT ACCEPT [11:670]
:POSTROUTING ACCEPT [10:600]
-A PREROUTING -i wlan0 -p tcp -m mark --mark 0x63 -m tcp --dport 80 -j DNAT --to-destination 192.168.42.1
-A PREROUTING -i wlan0 -p tcp -m mark --mark 0x63 -m tcp --dport 443 -j DNAT --to-destination 192.168.42.1
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Wed Apr  9 23:40:14 2014
# Generated by iptables-save v1.4.14 on Wed Apr  9 23:40:14 2014
*filter
:INPUT ACCEPT [681:69554]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [429:59712]
-A FORWARD -i eth0 -o wlan0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlan0 -o eth0 -j ACCEPT
COMMIT
# Completed on Wed Apr  9 23:40:14 2014
